# puzzle_solver

./: .gitignore  CMakeLists.txt  README.md
PuzzleSolver/: Board.cpp  Board.h  CMakeLists.txt  GridView.cpp  GridView.h  ListView.cpp  ListView.h  Piece.cpp  Piece.h  Pieces.cpp  Pieces.h  Puzzle.cpp  Puzzle.h  PuzzleSolver.cpp  PuzzleSolver.h  Readme.md  Utilities.cpp  Utilities.h  common.h
samples/: puzzle1.txt  puzzle2.txt
